# w64devkit

./: CLAUDE.md  Dockerfile  README.md  SHA256SUMS  advzip.sample  alias.c  install.ps1  multibuild.sh  w64devkit.ini
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  main.yml  (+1 more)
contrib/: README.md  cppcheck.mak  libgc.c  libregex.c  llama.mak
etc/: quilt.quiltrc
miniexpat/: CMakeLists.txt  expat.h  expat_impl.cpp  tests.cpp
src/: 7z.mak  SHA256SUMS  alias.c  binutils-dlltool-zero-ordinals.patch  binutils-exclude-sysroot.patch  binutils-fix-ld-compare-section.patch  binutils-fix-uint.patch  binutils-gas-add-mno-big-obj.patch  binutils-pei386-runtime-reloacator-undefinedreference.patch  busybox-000-disable-beep.patch  busybox-001-disable-empty-complete.patch  busybox-002-ash-reset-ANSI-emulation-at-prompt.patch  busybox-002-default-noiconify.patch  busybox-002-fix-noconsole.patch  busybox-002-home-complete.patch  busybox-003-fix-libtool.patch  busybox-004-system-profile.patch  busybox-005-disable-utf8-check.patch  busybox-006-zstd.patch  busybox-007-mkdtemp.patch  busybox-alias.c  busybox-manifest.patch  cmake-debugger-realpath.patch  cmake-force-ninja.patch  compdb-cc.c  cppcheck-gcc13.patch  cppcheck-quiet.patch  cppcheck.mak  crossgcc-Os-no-declone-ctor-dtor.patch  crossgcc-libgomp-gfortran-path.patch  crossgcc-relocatable.patch  crt-printf-g.patch  ctags-fix-trailing-slash.patch  ctags-qml.patch  ctags-silence-warnings.patch  debugbreak.c  disable-empty-complete.patch  gcc-000-dwarf4.patch  gcc-11-rdtsc.patch  gcc-15-expand-expr-real-ice-fix.patch  (+56 more)
(+2 files in other folders)
